Added About section and updatd Github username

--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://ritikeshgupta.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
-github_username:  ritikesh1999
+github_username:  ritikeshgupta
 
 # Build settings
 theme: minima
